--- a/src/Footer/style.css
+++ b/src/Footer/style.css
@@ -13,3 +13,20 @@
     box-shadow: 0px -8px 8px rgba(58, 27, 196, 0.404);
     border-radius: 20px 20px 0 0;
 }
+
+.iconsAnwers {
+    font-size: 25px;
+    margin-top: 10px;
+}
+
+ion-icon[name=close-circle]{
+    color: rgba(233, 40, 40, 0.993);
+}
+
+ion-icon[name=alert-circle] {
+    color: rgb(214, 114, 0);
+}
+
+ion-icon[name=chevron-down-circle] {
+    color: rgb(27, 143, 27);
+}
