--- a/src/Footer/style.css
+++ b/src/Footer/style.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 10vh;
+    min-height: 10vh;
     background-color: #42b7e2;
     color: #2f3334;
     position: fixed;
@@ -12,6 +12,26 @@
     font-size: 18px;
     box-shadow: 0px -8px 8px rgba(58, 27, 196, 0.404);
     border-radius: 20px 20px 0 0;
+    padding: 10px;
+    box-sizing: border-box;
+}
+
+p {
+    margin: 5px;
+}
+
+h2 {
+    margin-top: 15px;
+    font-weight: 800;
+}
+
+.result {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 25px;
+    align-items: center;
 }
 
 .iconsAnwers {
